--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,14 +10,14 @@ body {
 
 .header {
     padding: 20px;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
     background-color: #2a607c;
     color: #ffffff;
 }
 
 .header h1 {
     display: inline-block;
-    font-size: 48px;
+    font-size: 5vw;
 }
 
 .header h1 .seo {
@@ -28,7 +28,7 @@ body {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
     font-size: 20px;
 }
 
@@ -47,7 +47,7 @@ a {
 }
 
 p {
-    font-size: 16px;
+    font-size: 1.5vw;
 }
 
 .hero {
@@ -58,17 +58,18 @@ p {
     background-size: cover;
     background-position: center;
 }
-
+/*Position*/
 .float-left {
     float: left;
     margin-right: 25px;
 }
-
+/*Position*/
 .float-right {
     float: right;
     margin-left: 25px;
 }
 
+/*Visual*/
 .content {
     width: 75%;
     display: inline-block;
@@ -82,44 +83,44 @@ p {
     float: right;
     width: 20%;
     height: 100%;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
     background-color: #2589bd;
 }
 
-.benefit-lead {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
 
+.benefit-cost,
+.benefit-lead,
 .benefit-brand {
     margin-bottom: 32px;
     color: #ffffff;
 }
 
-.benefit-cost {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
+
 
 .benefit-lead h3 {
     margin-bottom: 10px;
     text-align: center;
-}
+    color: white
+} 
 
-.benefit-brand h3 {
+ .benefit-brand h3 {
     margin-bottom: 10px;
     text-align: center;
-}
+    color: white;
+} 
 
 .benefit-cost h3 {
     margin-bottom: 10px;
     text-align: center;
-}
+    color:white
+} 
+
 
 .benefit-lead img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
+    color: white
 }
 
 .benefit-brand img {
@@ -138,7 +139,7 @@ p {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
     background-color: #0072bb;
     color: #ffffff;
 }
@@ -147,7 +148,7 @@ p {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
     background-color: #0072bb;
     color: #ffffff;
 }
@@ -156,7 +157,7 @@ p {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
     background-color: #0072bb;
     color: #ffffff;
 }
@@ -191,7 +192,7 @@ p {
 .footer {
     padding: 30px;
     clear: both;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
     text-align: center;
 }
 
